--- a/Master_file.ipynb
+++ b/Master_file.ipynb
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "# from werkzeug.security import generate_password_hash\n",
-    "#generate_password_hash(TODO, method='pbkdf2:sha256', salt_length=8)"
+    "#generate_password_hash(TODO, method='pbkdf2:sha256', salt_length=16)"
    ]
   },
   {
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "NAME  = 'Ati tesakulsiri'\n",
-    "Hashval = 'pbkdf2:sha256:260000$DV0hNwsv$8650f9a86d6dbe87fac307f7f8b3a95a1297064a94d6227cb0a08f942b1b753c'\n"
+    "Hashval = '260000$DV0hNwsv$8650f9a86d6dbe87fac307f7f8b3a95a1297064a94d6227cb0a08f942b1b753c'\n"
    ]
   },
   {
@@ -82,7 +82,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
-    "import math"
+    "import math\n",
+    "import pandas as pd\n"
    ]
   },
   {
@@ -233,6 +234,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### load Data from txt csv \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_data = np.genfromtxt('TDOD.txt',delimiter = ',', dtype=str);\n",
+    "# if header\n",
+    "headers = raw_data[0,:];\n",
+    "print(headers)\n",
+    "data = np.array(raw_data[1:,:], dtype=float);\n",
+    "print(data)\n",
+    "\n",
+    "y_label = 'TODO'\n",
+    "y_index = np.where(headers == y_label)[0][0]\n",
+    "y = np.array([data[:,y_index]]).T\n",
+    "\n",
+    "# Extract X from normalized data\n",
+    "X = data[:,0:y_index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = np.loadtxt('TDOD.txt',delimiter = ',')\n",
+    "f1 = data[:,0]\n",
+    "f2 = data[:,1]\n",
+    "X = np.array([f1, f2]).T\n",
+    "y = data[:,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_train = pd.read_csv('train_LoanPrediction.csv')\n",
+    "data_test = pd.read_csv('test_LoanPrediction.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "''''''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "------------------------------------------------------------------------------------------------\n",
     "\n",
     "## Basic plot"
@@ -319,6 +380,40 @@
     "plt.subplot(1,2,2)\n",
     "plt.scatter(X[:,0],X[:,1], marker='1',c = 'blue')\n",
     "plt.scatter(dnt[:,0],dnt[:,1], marker='1',c = 'coral')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_3D(theta,X,y,**kwag):\n",
+    "    fig = plt.figure(dpi = 150)\n",
+    "    ax = fig.add_subplot(projection='3d')\n",
+    "    p = ax.scatter(X[:,1],X[:,2],y,c=X[:,2],alpha=1)\n",
+    "    ax.set_xlabel('X1')\n",
+    "    ax.set_ylabel('X2')\n",
+    "    ax.set_zlabel('y')\n",
+    "    if kwag['title']:\n",
+    "        plt.title(kwag['title'])\n",
+    "    X1 = np.linspace(min(X[:,1]), max(X[:,1]), len(y))\n",
+    "    X2 = np.linspace(min(X[:,2]), max(X[:,2]), len(y))\n",
+    "\n",
+    "    xx1,xx2 = np.meshgrid(X1,X2)\n",
+    "\n",
+    "    yy = (theta[0] + theta[1]*xx1.T + theta[2]*xx2)\n",
+    "    ax.plot_surface(xx1,xx2,yy, alpha=0.5)\n",
+    "    ax.view_init(elev=25, azim=10)\n",
+    "    plt.colorbar(p)\n",
+    "    plt.show()\n",
+    "\n",
+    "axes_label={}\n",
+    "axes_label['xla'] = 'X1'\n",
+    "axes_label['yla'] = 'X2'\n",
+    "axes_label['zla'] = 'y'\n",
+    "axes_label['title'] = 'lab1data2 Dataset with Normal eq'\n",
+    "# plot_3D(theta_norm_ustd,X,y,**axes_label)"
    ]
   },
   {
@@ -1354,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1364,7 +1459,9 @@
     "    XtX = X.T @ X\n",
     "    theta_n = np.linalg.inv(XtX) @Xty\n",
     "    n = theta_n.shape[0]\n",
-    "    return theta_n"
+    "    return theta_n\n",
+    "\n",
+    "nm_eq = lambda X,y : np.linalg.inv(X.T @ X) @ X.T @ y"
    ]
   },
   {
@@ -2603,6 +2700,249 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fancy plot and extension\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def phi(i, theta, X, num_class):\n",
+    "    \"\"\"\n",
+    "    Here is how to make documentation for your function show up in intellisense.\n",
+    "    Explanation you put here will be shown when you use it.\n",
+    "    \n",
+    "    To get intellisense in your Jupyter notebook:\n",
+    "        - Press 'TAB' after typing a dot (.) to see methods and attributes\n",
+    "        - Press 'Shift+TAB' after typing a function name to see its documentation\n",
+    "\n",
+    "    The `phi` function returns phi_i = h_theta(x) for input patterns X and parameters theta.\n",
+    "    \n",
+    "    Inputs:\n",
+    "        i=index of phi\n",
+    "        \n",
+    "        X=input dataset\n",
+    "        \n",
+    "        theta=parameters\n",
+    "\n",
+    "    Returns:\n",
+    "        phi_i\n",
+    "    \"\"\"\n",
+    "    mat_theta = np.matrix(theta[i])\n",
+    "    mat_x = np.matrix(X)\n",
+    "    num = math.exp(np.dot(mat_theta, mat_x.T))\n",
+    "    den = 0\n",
+    "    for j in range(0,num_class):\n",
+    "        mat_theta_j = np.matrix(theta[j])\n",
+    "        den = den + math.exp(np.dot(mat_theta_j, mat_x.T))\n",
+    "    phi_i = num / den\n",
+    "    return phi_i\n",
+    "\n",
+    "\n",
+    "def indicator(i, j):\n",
+    "    '''\n",
+    "    Check whether i is equal to j\n",
+    "    \n",
+    "    Return:\n",
+    "        1 when i=j, otherwise 0\n",
+    "    '''\n",
+    "    if i == j: return 1\n",
+    "    else: return 0\n",
+    "\n",
+    "\n",
+    "def grad_cost(X, y, j, theta, num_class):\n",
+    "    '''\n",
+    "    Compute the gradient of the cost function for data X, y for parameters of\n",
+    "    output for class j in 1..k\n",
+    "    '''\n",
+    "    m, n = X.shape\n",
+    "    sum = np.array([0 for i in range(0,n)])\n",
+    "    for i in range(0, m):\n",
+    "        p = indicator(y[i], j) - phi(j, theta, X.loc[i], num_class)\n",
+    "        sum = sum + (X.loc[i] * p)\n",
+    "    grad = -sum / m\n",
+    "    return grad\n",
+    "\n",
+    "def gradient_descent(X, y, theta, alpha, iters, num_class):\n",
+    "    '''\n",
+    "    Perform iters iterations of gradient descent: theta_new = theta_old - alpha * cost\n",
+    "    '''\n",
+    "    n = X.shape[1]\n",
+    "    for iter in range(iters):\n",
+    "        dtheta = np.zeros((num_class, n))\n",
+    "        for j in range(0, num_class):\n",
+    "            dtheta[j,:] = grad_cost(X, y, j, theta, num_class)\n",
+    "        theta = theta - alpha * dtheta\n",
+    "    return theta\n",
+    "\n",
+    "def h(X, theta, num_class):\n",
+    "    '''\n",
+    "    Hypothesis function: h_theta(X) = theta * X\n",
+    "    '''\n",
+    "    X = np.matrix(X)\n",
+    "    h_matrix = np.empty((num_class,1))\n",
+    "    den = 0\n",
+    "    for j in range(0, num_class):\n",
+    "        den = den + math.exp(np.dot(theta[j], X.T))\n",
+    "    for i in range(0,num_class):\n",
+    "        h_matrix[i] = math.exp(np.dot(theta[i], X.T))\n",
+    "    h_matrix = h_matrix / den\n",
+    "    return h_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_J(theta, X, y, j, num_class):\n",
+    "    cost = None\n",
+    "    # YOUR CODE HERE\n",
+    "    return -indicator(y,j) * np.log(phi(j,theta,X,num_class))\n",
+    "    # raise NotIm?plementedError()\n",
+    "    return cost\n",
+    "\n",
+    "def my_grad_cost(X, y, j, theta, num_class):\n",
+    "    grad = None\n",
+    "    cost = 0\n",
+    "    m, n = X.shape\n",
+    "    sum = np.array([0 for i in range(0,n)])\n",
+    "    for i in range(0, m):\n",
+    "        cost = cost + my_J(theta,X.loc[i],y[i],j,num_class)\n",
+    "        p = indicator(y[i], j) - phi(j, theta, X.loc[i], num_class)\n",
+    "        #sum = sum + (X.loc[i] * p)\n",
+    "        sum = sum + (X.loc[i] * p)\n",
+    "        # cost_arr.append(cost)\n",
+    "    grad = -sum / m\n",
+    "    return grad, cost\n",
+    "def my_gradient_descent(X, y, theta, alpha, iters, num_class):        \n",
+    "    cost_arr = []\n",
+    "    # YOUR CODE HERE\n",
+    "    n = X.shape[1]\n",
+    "    for iter in range(iters):\n",
+    "        dtheta = np.zeros((num_class, n))\n",
+    "        for j in range(0, num_class):\n",
+    "            dtheta[j,:],cost = my_grad_cost(X, y, j, theta, num_class)\n",
+    "        theta = theta - alpha * dtheta\n",
+    "        cost_arr.append(cost)\n",
+    "    return theta,cost_arr\n",
+    "def get_result(X_test,theta):\n",
+    "    y_pred = []\n",
+    "    for index,row in X_test.iterrows():\n",
+    "        y_hat = h(row,theta,num_class)\n",
+    "        prediction = int(np.argmax(y_hat))\n",
+    "        y_pred.append(prediction)\n",
+    "    return y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'alpha_arr' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/6k/k4c4b7k97xg5ynmwn30pdxtr0000gn/T/ipykernel_30433/1662872448.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdescribestr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mracy\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mracy\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malpha_arr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0maccuracy_arr\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdpi\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0md\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcost_arr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdescribestr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mtxt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34mf'alpha={d[0]} |acc = {round(d[1],3)}'\u001b[0m \u001b[0;31m#initial theta = {str(d[1][0])*d[1].shape[0]}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'alpha_arr' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "theta_arr = []\n",
+    "cost_arr = []\n",
+    "accuracy_arr = []\n",
+    "\n",
+    "# design your own learning rate and num iterations\n",
+    "alpha_arr = np.array([0.0005, 0.001, 0.03, 0.062])\n",
+    "iterations_arr = np.array([200])\n",
+    "\n",
+    "for al in alpha_arr:\n",
+    "    for it in iterations_arr:\n",
+    "        theta,cost_arr_t = my_gradient_descent(X_train, y_train, theta_initial, al, it, 3)\n",
+    "\n",
+    "        theta_arr.append(theta)\n",
+    "        cost_arr.append(cost_arr_t)\n",
+    "\n",
+    "\n",
+    "describestr = [(a,racy) for a,racy in zip(alpha_arr,accuracy_arr) ]\n",
+    "\n",
+    "plt.figure(dpi=100)\n",
+    "for i,d in zip(cost_arr,describestr):\n",
+    "    txt = f'alpha={d[0]} |acc = {round(d[1],3)}' #initial theta = {str(d[1][0])*d[1].shape[0]}\n",
+    "    plt.plot(i, '-', label=txt)\n",
+    "plt.title('Training cost over time with batch gradient descent (no normalization)')\n",
+    "plt.xlabel('Iteration')\n",
+    "plt.ylabel('$J(\\theta)$')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'get_result' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/6k/k4c4b7k97xg5ynmwn30pdxtr0000gn/T/ipykernel_30433/1306913541.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# y_hat = get_result(X_test,theta_arr[-1])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# plot_y_arr = [y_hat,y_test]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0my_hat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_result\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtheta_arr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mplot_y_arr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0my_hat\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mcompare_arr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'SepalLengthCm'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'SepalWidthCm'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'SepalWidthCm'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'PetalLengthCm'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'PetalLengthCm'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'PetalWidthCm'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'SepalLengthCm'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'PetalWidthCm'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'get_result' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# y_hat = get_result(X_test,theta_arr[-1])\n",
+    "# plot_y_arr = [y_hat,y_test]\n",
+    "y_hat = get_result(X_train,theta_arr[-1])\n",
+    "plot_y_arr = [y_hat,y_train]\n",
+    "compare_arr = [('SepalLengthCm','SepalWidthCm'),('SepalWidthCm', 'PetalLengthCm'),('PetalLengthCm','PetalWidthCm'),('SepalLengthCm','PetalWidthCm')]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def super_nova_ati_plot_march3(plot_y_arr,compare_arr,X):\n",
+    "    for fir,seco in compare_arr:\n",
+    "        fig, ax = plt.subplots(1,2)\n",
+    "        fig.set_figheight(10)\n",
+    "        fig.set_figwidth(25)\n",
+    "        fig.subplots_adjust(left=.2, bottom=None, right=None, top=None, wspace=.1, hspace=.2)\n",
+    "        plt1 = plt.subplot(1,2,1)\n",
+    "        plt2 = plt.subplot(1,2,2)\n",
+    "        plt_list = [plt1,plt2]\n",
+    "        describer = ['Predicted result','Actual result']\n",
+    "        for plt_each,y_each,d in zip(plt_list,plot_y_arr,describer):\n",
+    "            plt_each.scatter(X[fir],X[seco],c=y_each)\n",
+    "            plt_each.set_xlabel(fir)\n",
+    "            plt_each.set_ylabel(seco)\n",
+    "            plt_each.set_title(f\" {fir} VS {seco} using color with {d}\")\n",
+    "\n",
+    "    \n",
+    "\n",
+    "super_nova_ati_plot_march3(plot_y_arr,compare_arr,X_train)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
